--- a/src/Components/Product.module.css
+++ b/src/Components/Product.module.css
@@ -1,4 +1,42 @@
-.img{
-    width: 200px;
-    height: 100%;
+.img {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.02),
+    0px 0px 5.3px rgba(0, 0, 0, 0.028), 0px 0px 10px rgba(0, 0, 0, 0.035),
+    0px 0px 17.9px rgba(0, 0, 0, 0.042), 0px 0px 33.4px rgba(0, 0, 0, 0.05),
+    0px 0px 80px rgba(0, 0, 0, 0.07) !important;
+}
+
+.pipeline{
+    color: darkgray;
+}
+
+.price{
+    text-decoration: line-through;
+}
+
+.hr{
+    transform: rotate(90deg);
+    position: relative;
+    top: 50px;
+    /* height: 50%; */
+}
+
+.details{
+    text-decoration: underline;
+}
+
+.text{
+    color: red;
+}
+
+@media screen and (max-width: 768px){
+    .hr{
+        transform: rotate(180deg);
+        position: relative;
+        top: 0px;
+    }
 }
