--- a/src/Components/Bid.module.css
+++ b/src/Components/Bid.module.css
@@ -1,56 +1,154 @@
 .box {
-    position: relative;
-    background-color: rgb(0, 0, 0, 0.75);
-    width: 300px;
-    height: 400px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+  position: relative;
+  background-color: rgb(0, 0, 0, 0.75);
+  width: 400px;
+  height: 1050px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.box::after {
+  content: "";
+  position: absolute;
+  width: 600px;
+  height: 1150px;
+  background-image: conic-gradient(
+    transparent,
+    transparent,
+    transparent,
+    #d400d4
+  );
+  animation: animate 4s linear infinite;
+  animation-delay: -2s;
+}
+
+.box::before {
+  content: "";
+  position: absolute;
+  width: 600px;
+  height: 1150px;
+  background-image: conic-gradient(
+    transparent,
+    transparent,
+    transparent,
+    #00ccff
+  );
+  animation: animate 4s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .box::after {
-    content: '';
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    background-image: conic-gradient(transparent, transparent, transparent, #d400d4);
-    animation: animate 4s linear infinite;
-    animation-delay: -2s;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .box::before {
-    content: '';
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    background-image: conic-gradient(transparent, transparent, transparent, #00ccff);
-    animation: animate 4s linear infinite;
-  }
-  
-  
-  @keyframes animate {
-    0%{
-      transform: rotate(0deg);
-    }
-    100%{
-      transform: rotate(360deg);
-    }
-  }
-  
-  .span{
-    position: absolute;
-    inset: 5px;
-    border-radius: 16px;
-    background: #0c1022;
-    z-index: 1;
-  }
-  
-  .text{
-    position: relative;
+}
+
+.span {
+  position: absolute;
+  inset: 5px;
+  border-radius: 16px;
+  background: #0c1022;
+  z-index: 1;
+}
+
+.shop {
+  z-index: 2;
+}
+
+.text {
+  z-index: 2;
+}
+
+.texts{
     z-index: 2;
-    color: #fff;
-    /* font-size: 2em; */
-    padding: 12px;
+}
+
+.img {
+  z-index: 2;
+  width: 35%;
+  height: 35%;
+  border: 2px solid white;
+  border-radius: 50%;
+  background-color: green;
+  padding: 4px;
+  animation: animate 2s linear infinite;
+}
+
+.image {
+  z-index: 2;
+  width: 35%;
+  height: 100%;
+  filter: invert();
+}
+
+.price {
+  text-decoration: line-through;
+}
+
+@media screen and (max-width: 768px) {
+  .texts {
+    flex-direction: column;
+    align-items: center;
   }
+  .image{
+      width: 50%;
+    }
+    .box {
+      height: 1150px;
+    }
+    
+    .box::after {
+      height: 1250px;
+    }
+    
+    .box::before {
+      height: 1250px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+  .box {
+    width: 350px;
+  }
+
+  .box::after {
+    width: 550px;
+  }
+
+  .box::before {
+    width: 550px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .box {
+    width: 300px;
+  }
+
+  .box::after {
+    width: 500px;
+  }
+
+  .box::before {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 310px) {
+  .box {
+    width: 250px;
+  }
+
+  .box::after {
+    width: 450px;
+  }
+
+  .box::before {
+    width: 450px;
+  }
+}
