--- a/src/Components/Product.module.css
+++ b/src/Components/Product.module.css
@@ -18,11 +18,20 @@
     text-decoration: line-through;
 }
 
+.placed{
+    color: darkgray;
+}
+
 .hr{
-    transform: rotate(90deg);
-    position: relative;
-    top: 50px;
-    /* height: 50%; */
+    background-color: rgb(35, 18, 44);
+    width: 5px;
+    height: 100%
+}
+
+.hrs{
+    background-color: rgb(35, 18, 44);
+    width: 5px;
+    height: 10%px;
 }
 
 .details{
@@ -35,8 +44,7 @@
 
 @media screen and (max-width: 768px){
     .hr{
-        transform: rotate(180deg);
-        position: relative;
-        top: 0px;
+        width: 100%;
+        height: 5px;
     }
 }
